assets/styles/app.css
html{
    scroll-behavior: smooth;
}
body {
    background-color: black;
    font-family: "Inter", sans-serif;
}
.container-1440 {
    max-width: 1440px;
    width: 100%;
    margin: 0 auto;
    background-color: #FFFDF7;
}

a {
    color: #666666;
}
/* ---------------NAV GreenGoodies (partials)--------------------- */
.nav-gg {
    background-color: #FFFDF7; 
    height: 81px;             
    display: flex;
    align-items: center;
    border-bottom: 1px solid #F6F5F0;
}

.nav-inner {
    display: flex;
    align-items: center;
    justify-content: space-between;
}
/* Logo */
.nav-gg .navbar-brand img {
    height: 19px; 
}

/* Liens */
.nav-gg .nav-link {
    color: #333333;      
    font-size: 14px;     
    font-weight: 400;   
    padding: 0;          
}

.nav-gg .nav-link:hover {
    color: #000000;
}
/* ---------------HOMEPAGE GreenGoodies--------------------- */
/*_________HERO SECTION_________ */
.hero-section {
    background-color: #E8F0E3;
    height: 751px;
}

.hero-section .row {
    height: 100%;
}

.hero-right {
    flex: 0 0 calc(50% + 15px); 
}

.hero-left {
    flex: 0 0 calc(50% - 15px);
}

/* Bloc left */
.hero-text-block {
    width: 362px;
    height: 154px;
}

.hero-title {
    font-family: "Inter", sans-serif;
    font-weight: 500;
    font-size: 64px;
    line-height: 100%;
    color: #333333;
    margin-bottom: 32px;
}

.hero-text {
    font-family: "Inter", sans-serif;
    font-weight: 300;
    font-size: 18px;
    line-height: 100%;
    color: #333333;
    margin-bottom: 12px;
}

/* Bloc right */
.hero-image-wrapper {
    height: 100%;  
    overflow: hidden;   
}

.hero-img {    
    width: 100%;
    height: 106%;
    object-fit: cover;
    object-position: bottom;
    transform: scale(1.085);
}

/*_________PRODUCT SECTION_________ */

.products .section-title {
    font-weight: 500;
    font-size: 14px;
    color: #333333;    
    margin: 35px 0 35px 95px;    
}
.card {
    border-radius: 0;
    border: none;    
}

img.card-img-top {
    width: 480px;
    height: 474px;
    object-fit: cover;
    object-position: center;
    border-radius: 0;
}
h3.card-title {
    font-weight: 600;
    font-size: 16px;
    color: #000000;
    margin-top: 22px;
}

p.card-text {
    font-weight: 400;
    font-size: 14px;
    color: #666666;
    margin-top: 5px;
}

.card .card-text small.gg-price {
    color: #333333;
    font-weight: 400;
    font-size: 14px;
}

/* Taille totale de la card */
.card {
    height: 692px;
    display: flex;
    flex-direction: column;
}

/* Footer de la card */
.card .card-footer {
    height: 77px;  
    background-color: #FFFDF7; 
    display: flex;
    border: none;     
    border-radius: 0;
    align-items: center;
    justify-content: center;
    margin-top: auto; /* pousse le footer en bas si .card est en flex column */
}

/* Lien dans le footer */
.card .card-footer a.gg-card-link {
    font-weight: 400;
    font-size: 14px;
    color: #000000;
    text-decoration: none; 
}

/* Effet hover sur la div footer */
.card .card-footer:hover {
    background-color: #333333;
}
.card .card-footer:hover a.gg-card-link {
    color: #ffffff;
}
/*___________SECTION VALEURS_____________*/
/* SECTION ENTIÈRE */
.values-section {
    height: 1292px;
    width: 100%;
}

/* BLOCS */
.values-block {
    height: 646px;
}

/* FONDS */
.bg-beige {
    background: #EBE3D3;
}

.bg-green {
    background: #E8F0E3;
}

/* ZONE TEXTE*/
.values-text-block {
    width: 465px;    
}

/* marge faible selon le côté */
.values-text-left {
    margin-left: 40px;
    margin-bottom: 20px;
    max-width: 440px;
}

.values-text-right {
    margin-right: 40px;
    margin-bottom: 20px;
}

/* IMAGES */
.values-img-right,
.values-img-left {
    width: 487px;
    height: 646px;
    object-fit: cover;   
}

/* effet zoom + positionnement image */
.values-img-right {
   transform: scale(1.23) translateX(42px) translateY(2px);  
}

.values-img-left {
    transform: scale(1.23) translateX(0px) translateY(-40px); 
}

.values-img-wrapper {
    width: 487px;
    height: 646px;
    overflow: hidden; /* empêche l’image zoomée de déborder */
}

/* TITRES DE SECTION */
.section-title {
    font-size: 20px;
    font-weight: 500;
    color:#333333;
}

/* PARAGRAPHES*/
.values-text-block p {
    font-weight: 300;         
    font-size: 14px;
    color:#333333;
}
/* ---------------PRODUCT PAGE GreenGoodies--------------------- */
.product-section {
    padding-bottom: 221px; /* 907px (zone content) - 686px (photo/texte) */
}

/* Colonne gauche */
.product-left {
    width: 734px;
    height: 686px;
}

.product-img-wrapper {
    width: 734px;
    height: 686px;
    overflow: hidden;
}

.product-img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
   
}

/* Colonne droite */
.product-right {
    width: 465px;
    height: 686px;
}

/* Titre à 168px du haut de la PAGE → 168 - 81 = 87px sous la nav */
.product-text-block {
    margin-top: 87px;
}

/* Bouton */
.product-btn {
    height: 77px;
    border-radius: 0;
    font-size: 14px;
    font-weight: 400;
    background-color: #565656;
    border-color: #565656;
}

.product-btn:hover {
    background-color: #000000;
    border-color: #000000;
}
.gg-product-title {
    font-size: 20px;
    font-weight: 500;
    color: #333333;
    margin-bottom: 20px;
}

.gg-product-price {
    font-size: 30px;
    font-weight: 300;
    color: #333333;
    margin-bottom: 45px;
}

.gg-product-label {
    font-size: 10px;
    font-weight: 400;
    color: #666666;
    margin-bottom: 5px;
}

.gg-product-description {
    font-size: 14px;
    font-weight: 400;
    color: #666666;
    line-height: 125%;
    font-family: "Inter", sans-serif;
}

/*----------------REGISTER GreenGoodies------------*/

/* Structure générale */
.register-wrapper {
    display: flex;
    min-height: calc(100vh - 80px);
}

/* Colonne gauche fixe */
.register-left {
    width: 734px;
    height: 1104px;
    overflow: hidden;
}

.register-image {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

/* Colonne droite flexible */
.register-right {
    flex: 1; /* prend tout l’espace restant */
    display: flex;
    justify-content: center; /* centre le formulaire */
    align-items: flex-start;
    padding-top: 80px; /* titre à 161px du haut (81px nav + 80px) */
}

/* Bloc formulaire */
.form-container {
    width: 479px; /* largeur exacte Figma */
}

/* Titres */
.register-title {
    font-weight: 500;
    font-size: 20px;
    color: #333333;
}

.register-subtitle {
    font-size: 12px;
    color: #666666;
    margin-bottom: 18px;
}

/* Espacement entre les champs (+10px par rapport au mb-3 Bootstrap) */
.form-container .mb-3 {
    margin-bottom: 26px !important; /* 16px (mb-3) + 10px */
}

/* Labels */
.form-container label {
    font-size: 14px;
    color: #666666;
}

/* Champs */
.form-container input:not([type="checkbox"]) {
    width: 100%;
    height: 67px !important; 
    background: #FFFDF7 !important;
    border: 1px solid #666666 !important;
    border-radius: 0 !important; /* PAS DE BORDER RADIUS */
    padding: 0 14px !important;
    font-size: 14px;
}

/* Case à cocher CGU */
.form-container input[type="checkbox"] {
    width: 19px;
    height: 19px;
    border: 1px solid #666666;
    border-radius: 0;
    accent-color: #565656;
    flex-shrink: 0;
    cursor: pointer;
}



/* Bouton */
.btn-register {
    margin-top: 20px;
    margin-bottom: 10px;
    width: 100%; 
    height: 77px; 
    background-color: #565656 !important;
    color: white;
    border-radius: 0 !important; 
    font-family: Inter, sans-serif;
    font-size: 14px;
    font-weight: 400;
    border: none;
}

.btn-register:hover {
    background-color: #000000 !important;
    color: white;
}

.login-image {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center left;
    transform: scale(1.25);
    transform-origin: center left;
}

/* ---------------PAGE CONNEXION GreenGoodies--------------------- */
.login-left {
    width: 734.12px;
    height: 988px;
    overflow: hidden;
    flex-shrink: 0;
}

.login-right {
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: flex-start;
    padding-top: 80px;
}

.login-form-container {
    width: 479px;
    margin-right: 20px;
}

/* Titre Connexion */
.login-title {
    font-weight: 500;
    font-size: 20px;
    color: #333333;
    margin-bottom: 37px;
}

.login-form-container .mb-3:last-of-type {
    margin-bottom: 13px !important; 
}

.login-form-container .btn-register {
    margin-top: 15px;
}

.login-form-container .register-login-link {
    margin-top: 22px !important; /* mt-3 (16px) + 6px */
}

/* Lien connexion */
.register-login-link {
    font-family: Inter, sans-serif;
    font-size: 14px;
}

/* ---------------PANIER GreenGoodies--------------------- */
/* Structure générale */
.cart-wrapper {
    background: #F7F1EC;
    height: 734px;}

/*----------------FOOTER GreenGoodies (Base)------------*/
.footer-right {
    padding-right: 100px;
    font-size: 14px;
    color: #666666;
}

